# skuldbot-studio

./: .dockerignore  .gitignore  .gitkeep  .npmrc  BRANDING.md  DESIGN_SYSTEM.md  Dockerfile  INTEGRATION_GUIDE.md  MASTER_DESIGN_SYSTEM.md  NEXION_ANALYSIS.md  README.md  REFACTORING_UI_CHECKLIST.md  STUDIO_STATUS.md  TESTING_AI_PLANNER_V2.md  TEST_INTEGRATION.md  check-setup.sh  config.yaml  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: ip-gate.yml
docker/: nginx.conf
k8s/: deployment.yaml
observability/: prometheus.yml
scripts/: gen_node_availability.sh  run_flow_runtime_requirements_tests.mjs  run_node_availability_tests.mjs  verify_studio.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  protection.rs
src-tauri/src/ai_planner/: db.rs  types.rs
src-tauri/src/enterprise/: config.rs  health.rs  mod.rs  persistence.rs  resilience.rs  telemetry.rs
src-tauri/src/mcp/: client.rs  mod.rs  server.rs  types.rs
src-tauri/src/mcp/servers/: compliance.rs  mod.rs
src/components/: AnimatedEdge.tsx  AppLayout.tsx  BotEditor.tsx  CustomNode.tsx  DebugPanel.tsx  EmptyState.tsx  FlowEditor.tsx  FlowRuntimePreflight.tsx  FormBuilder.tsx  FormPreview.tsx  FormTriggerModal.tsx  GroupNode.tsx  LogsPanel.tsx  NodeAvailabilityBadge.tsx  NodeConfig.tsx  NodeConfigPanel.tsx  NodeSearchDialog.tsx  ProjectToolbar.tsx  ProtectionBuilder.tsx  Sidebar.tsx  Toolbar.tsx  UnifiedSidebar.tsx  VaultManager.tsx  WebhookTriggerModal.tsx
src/components/ai-planner/: AIPlannerV2Panel.tsx  ConnectionDialog.tsx
src/components/ai-planner/v2/: ChatPanel.tsx  PreviewPanel.tsx  ValidationPanel.tsx
src/components/marketplace/: MarketplaceBrowser.tsx
src/components/ui/: Icon.tsx  SkuldLogo.tsx  Toast.tsx  ToastContainer.tsx  alert-dialog.tsx  select.tsx
src/components/usage/: UsageDashboard.tsx
src/data/: nodeAvailability.json  nodeTemplates.ts
src/lib/: flowRuntimeRequirements.ts  nodeAvailability.ts
src/store/: aiPlannerV2Store.ts  connectionsStore.ts  debugStore.ts  flowStore.ts  logsStore.ts  projectStore.ts  toastStore.ts  validationStore.ts
src/types/: ai-planner.ts  flow.ts  tauri.d.ts
tests/: flow-runtime-requirements.test.ts  node-availability.test.ts
